hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__use_target_does_not_exist_in_namespace.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'S' not found",
                span: 5:22; [94, 95],
                level: Error,
            },
            Diagnostic {
                message: "Symbol 'S' not found",
                span: 4:21; [70, 71],
                level: Error,
            },
        ],
        inputs: (),
    },
)
