hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__use_target_namespace_does_not_exist.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'S' not found",
                span: 4:22; [69, 70],
                level: Error,
            },
            Diagnostic {
                message: "Namespace 'ns1' not found",
                span: 3:17; [41, 44],
                level: Error,
            },
        ],
        inputs: (),
    },
)
